--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Coupon per le pucio</h1>
+        <h1>Coupon per le puci</h1>
     </header>
     <main>
         <section id="coupons">
